# fastapi-starter

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  Pipfile  README.md  commitlint.config.js  commitlint.config.mjs  create_item.py  create_offer.py  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  read_file.py  read_item.py  read_items.py  rebase-i18n.sh  requirements.txt  tsconfig.base.json  update_item.py
apps/backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 23cc29b4c5d6_add_hashed_password_to_users.py  3a4b5c6d7e8f_create_files_table.py  4a5b6c7d8e9f_create_permissions_table.py  5b6c7d8e9f0a_create_roles_table.py  6c7d8e9f0a1b_create_role_permissions_table.py  7d8e9f0a1b2c_create_user_roles_table.py  8e9f0a1b2c3d_create_password_reset_tokens_table.py  9f0a1b2c3d4e_add_email_verification_fields.py  a0b1c2d3e4f5_add_two_factor_auth_fields.py  b1c2d3e4f5g6_add_resource_action_to_permissions.py  c829297365ec_create_users_table.py
apps/backend/alembic/versions_timescale/: 0001_enable_timescaledb.py
apps/backend/scripts/: db_status.py  seed_rbac.py
apps/backend/src/app/: main.py
apps/backend/src/app/api/: __init__.py  admin.py  audit_logs.py  auth.py  files.py  health.py  permissions.py  roles.py  scheduled_tasks.py  users.py
apps/backend/src/app/core/: __init__.py  api_key.py  audit.py  config.py  deps.py  error_codes.py  exception_handlers.py  (+7 more)
apps/backend/tests/: conftest.py  test_auth.py  test_email_service.py  test_email_verification.py  test_exception_handlers.py  test_exceptions.py  test_file_service.py  test_files.py  test_graphql.py  test_graphql_errors.py  test_graphql_extensions.py  test_graphql_ide.py  test_graphql_rbac.py  test_graphql_sandbox.py  test_graphql_security.py  test_graphql_subscriptions.py  test_health.py  test_main.py  test_messaging.py  test_middleware.py  test_migrations.py  test_password_reset.py  test_permission_model.py  test_permission_service.py  test_permissions_api.py  test_rate_limit.py  test_rbac_deps.py  test_role_model.py  test_role_permission.py  test_role_service.py  test_roles_api.py  test_security.py  test_seeds.py  test_storage_service.py  test_user_role.py  test_user_service.py  test_users.py  test_users_roles_api.py
apps/backend/tests/contract/: test_rest_contract.py
apps/backend/tests/integration/: conftest.py  test_auth_integration.py  test_files_integration.py  test_permissions_integration.py  test_roles_integration.py  test_users_integration.py
(+977 files in other folders)
