[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["walkerchiu <chenjen.chiou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
fastapi-pagination = "^0.12.19"
loguru = "^0.7.2"
msgspec = "^0.18.6"
path = "^16.10.0"
pytz = "^2024.1"
asgiref = "^3.7.2"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
